[gd_scene load_steps=7 format=3 uid="uid://bmdjy3cb5ftuh"]

[ext_resource type="Script" path="res://Game.gd" id="1_6afto"]
[ext_resource type="Script" path="res://days/day2/round_res.gd" id="2_6tqrw"]
[ext_resource type="Script" path="res://days/day2/game_res.gd" id="3_0x7se"]

[sub_resource type="Resource" id="Resource_kb58a"]
script = ExtResource("2_6tqrw")
red = 2
green = 3
blue = 4

[sub_resource type="Resource" id="Resource_k7t8j"]
script = ExtResource("2_6tqrw")
red = 13
green = 14
blue = 15

[sub_resource type="Resource" id="Resource_lnv2r"]
script = ExtResource("3_0x7se")
id = 3
rounds = Array[ExtResource("2_6tqrw")]([SubResource("Resource_kb58a"), SubResource("Resource_k7t8j")])

[node name="Game" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00614548, 0, 0.00335741)
script = ExtResource("1_6afto")
game_res = SubResource("Resource_lnv2r")

[node name="CubeSpawn" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.412, 0)
layers = 0
size = Vector3(2, 1, 2)

[node name="Environment" type="CSGBox3D" parent="."]
layers = 3
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(3, 0.1, 3)

[node name="StartRoundEvaluation" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="StartRoundEvaluation" to="." method="_on_start_round_evaluation_timeout"]
